Removed unnecessary attribute on "Televisions" anchor element and changed hover styling attachment for "navbar-link" class instead of all anchor elements for clearer specificity. Converted css values from pixels to rems. Added "line-break-top" class for top border of last row inside table element to avoid small break in border.

--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,9 @@ img {
 
 nav {
   background-color: white;
-  width: 38rem;
-  height: 40%;
-  border-radius: 4px;
+  width: 37.5rem;
+  height: 3.8rem;
+  border-radius: 0.4rem;
   align-content: center;
   margin-bottom: 1.6rem;
 }
@@ -32,22 +32,21 @@ nav ul {
   list-style-type: none;
   flex-direction: row;
   justify-content: start;
-  padding-left: 10px;
+  padding-left: 0.6rem;
 }
 
 a {
-  font-size: 22px;
+  font-size: 1.4rem;
   text-decoration: none;
   color: black;
-  margin: 6px;
-  padding: 6px;
-  border: #bbbbbb 1px;
-  border-radius: 4px;
+  margin: 0.4rem;
+  padding: 0.4rem;
+  border: #bbbbbb 0.1rem;
+  border-radius: 0.5rem;
 }
 
-a:hover {
-  border: #bbbbbb 1px solid;
-  background-color: #e5e5e5;
+.navbar-link:hover {
+  border: #bbbbbb 0.1rem solid;
   background-image: linear-gradient(to bottom, #e5e5e5, #f9f9f9);
   transition:all 0.3s ease;
 }
@@ -66,24 +65,24 @@ main {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: normal;
-  letter-spacing: 8px;
+  letter-spacing: 0.5rem;
   color: #ff7318;
   padding-top: 1rem;
   margin: 1rem;
 }
 
 p {
-  font-size: 20px;
-  letter-spacing: 1px;
+  font-size: 1.25rem;
+  letter-spacing: 0.05rem;
   margin: 1rem;
 }
 
 
 
 h2 {
-  font-size: 22px;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
@@ -97,11 +96,11 @@ table {
 
 td {
   color: white;
-  font-size: 20px;
-  letter-spacing: 0.6px;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
   font-weight: 500;
   text-align: start;
-  padding: 0.9rem;
+  padding: 1.1rem;
 }
 
 .product-tiles {
@@ -117,12 +116,16 @@ td {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 274px;
+  width: 17rem;
   margin: 1rem;
 }
 
-.line-break {
-  border-bottom: #e26203 3px solid;
+.line-break-bottom {
+  border-bottom: #e26203 0.2rem solid;
+}
+
+.line-break-top {
+  border-top: #e26203 0.2rem solid;
 }
 
 .product-info {
